--- a/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
+++ b/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
@@ -597,6 +597,7 @@ paths:
             forecast with the exact same file, but a different configuration.
             Files saved this way can be re-used via the `savedInputPath` field.
           required: false
+          default: false
         - in: formData
           name: runName
           type: string
