changes for adding workers council approvall.. (#2522)
* changes for adding workers council approvall..

* adding default value as false change is made

---------

Co-authored-by: GAISUSH <GAISUSH>

--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -1190,7 +1190,11 @@ definitions:
           $ref: "#/definitions/TeamMemberVO"
       aiRiskAssessmentType:
         type: string
-        enum: ["NOT_APPLICABLE", "BASIC_RISK", "HIGH_RISK"]    
+        enum: ["NOT_APPLICABLE", "BASIC_RISK", "HIGH_RISK"] 
+      workersCouncilApproval:
+        description: "Checks if workers council is approved or not its a boolean value it can be true/false "
+        type: boolean
+        default: false
   
   LinkVO:
     type: object
