--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1295,6 +1295,9 @@ definitions:
   DeploymentAuditVO:
     type: object
     properties:
+      id:
+        type: string
+        description: "deployment audit Id"
       triggeredBy:
         type: string
         description: "User who triggered deployment of codespace"
