added support csv changes

--- a/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
+++ b/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
@@ -704,21 +704,21 @@ paths:
             key.
           required: false
           type: "string"
-        # - in: formData
-        #   name: drivers
-        #   type: file
-        #   description: The drivers file to upload.
-        #   required: false
-        # - in: formData
-        #   name: planning_data
-        #   type: file
-        #   description: The planning_data file to upload.
-        #   required: false
-        # - in: formData
-        #   name: mapping
-        #   type: file
-        #   description: The mapping file to upload.
-        #   required: false
+        - in: formData
+          name: drivers
+          type: file
+          description: The drivers file to upload.
+          required: false
+        - in: formData
+          name: planning_data
+          type: file
+          description: The planning_data file to upload.
+          required: false
+        - in: formData
+          name: mapping
+          type: file
+          description: The mapping file to upload.
+          required: false
       responses:
         201:
           description: "Returns message of success or failure "
