Alice Validation Changes

--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -21,6 +21,9 @@ MODEL_REGISTRY_API_BASEURL =
 #Clamv-Azure image URL
 CLAMAV_IMAGE_URL = YOUR_CLAMAV_IMAGE_URL
 
+#Alice-Application name
+ALICE_APP_NAME= YOUR_APP_NAME
+
 
 #DNA Application UI Configurable Values - START
 
