adding validations to alice

--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -97,4 +97,4 @@ MATOMO_APP_URL=${PROJECTMO_MATOMO_APP_URL}
 SPIRE_URL={PROJECTMO_SPIRE_URL}
 GENAI_DIRECT_CHAT_URL={PROJECTMO_GENAI_DIRECT_CHAT_URL}
 CLAMAV_IMAGE_URL={PROJECTMO_CLAMAV_IMAGE_URL}
-ALICE_APP_NAME={PROJECTMO_ALICE_APP_NAME}
+CODESPACE_SECURITY_APP_ID={PROJECTMO_ALICE_APP_NAME}
