--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -22,7 +22,7 @@ MODEL_REGISTRY_API_BASEURL =
 CLAMAV_IMAGE_URL = YOUR_CLAMAV_IMAGE_URL
 
 #Alice-Application name
-ALICE_APP_NAME= YOUR_APP_NAME
+CODESPACE_SECURITY_APP_ID= YOUR_APP_NAME
 
 
 #DNA Application UI Configurable Values - START
