adding validations to alice

--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -21,8 +21,8 @@ MODEL_REGISTRY_API_BASEURL =
 #Clamv-Azure image URL
 CLAMAV_IMAGE_URL = YOUR_CLAMAV_IMAGE_URL
 
-#Alice-Application name
-CODESPACE_SECURITY_APP_ID= YOUR_APP_NAME
+#Your-codeSpace-security-Application Id
+CODESPACE_SECURITY_APP_ID= YOUR_ CODESPACE_SECURITY_APP_ID 
 
 
 #DNA Application UI Configurable Values - START
