adding validations to alice

--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -22,7 +22,7 @@ MODEL_REGISTRY_API_BASEURL =
 CLAMAV_IMAGE_URL = YOUR_CLAMAV_IMAGE_URL
 
 #Your-codeSpace-security-Application Id
-CODESPACE_SECURITY_APP_ID= YOUR_ CODESPACE_SECURITY_APP_ID 
+CODESPACE_SECURITY_APP_ID= YOUR_CODESPACE_SECURITY_APP_ID 
 
 
 #DNA Application UI Configurable Values - START
