Feature/code space alice (#2561)
* Alice Validation Changes

* Alice Validation Changes

* adding validations to alice

* adding validations to alice

* adding validations to alice

* adding validations to alice

* adding validations to alice

* adding validations to alice

* adding validations to alice

---------

Co-authored-by: SHPEEKA <SHPEEKA>

--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -21,6 +21,9 @@ MODEL_REGISTRY_API_BASEURL =
 #Clamv-Azure image URL
 CLAMAV_IMAGE_URL = YOUR_CLAMAV_IMAGE_URL
 
+#Your-codeSpace-security-Application Id
+CODESPACE_SECURITY_APP_ID= YOUR_CODESPACE_SECURITY_APP_ID 
+
 
 #DNA Application UI Configurable Values - START
 
