added getall configs chnages and adding prefixs

--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceAdmin.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceAdmin.yaml
@@ -152,6 +152,11 @@ paths:
             description: page size to limit the number of SecurityConfigs, Example 15
             required: false
             type: integer
+          - name: projectName
+            in: query
+            description: project name to get SecurityConfig.
+            required: false
+            type: string
       responses:
         201:
           description: "Returns message of success or failure"
