--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
@@ -229,6 +229,42 @@ paths:
         500:
           description: "Internal error"
 
+  /recipeDetails/recipesByStatus:
+      get:
+        tags:
+          - "code-server-recipe"
+        summary: "Get all recipes which are in requested and accepted state, waiting for processing."
+        description: "Get all recipes which are in requested and accepted state, waiting for processing"
+        operationId: "getAllRecipesWhichAreInRequestedAndAcceptedState"
+        parameters:
+            - name: offset
+              in: query
+              description: page number from which listing of SecurityConfigs should start. Offset. Example 2
+              required: false
+              type: integer
+            - name: limit
+              in: query
+              description: page size to limit the number of SecurityConfigs, Example 15
+              required: false
+              type: integer
+        responses:
+          201:
+            description: "Returns message of success or failure"
+            schema:
+              $ref: "#/definitions/RecipeCollectionVO"
+          204:
+            description: "Fetch complete, no content found."
+          400:
+            description: "Bad request."
+          401:
+            description: "Request does not have sufficient credentials."
+          403:
+            description: "Request is not authorized."
+          405:
+            description: "Method not allowed"
+          500:
+            description: "Internal error"
+
 definitions:
   RecipeVO:
     type: object
@@ -285,6 +321,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/UserInfoVO" 
+      status:
+        type: string
+        description: "status of the recipe"
 
   RecipeSoftwareVO:
     type: object
