Creating DataProduct From DataLake

--- a/packages/datalake-mfe/.env
+++ b/packages/datalake-mfe/.env
@@ -1,4 +1,5 @@
 CONTAINER_APP_URL= http://localhost:9090
-DATALAKE_API_BASEURL= 
+DATALAKE_API_BASEURL=
 REPORTS_API_BASEURL=
 STORAGE_API_BASEURL=
+DATAPRODUCT_API_BASEURL=
