--- a/packages/datalake-mfe/.docker.env
+++ b/packages/datalake-mfe/.docker.env
@@ -2,3 +2,4 @@ CONTAINER_APP_URL=${PROJECTSMO_CONTAINER_APP_URL}
 DATALAKE_API_BASEURL=${PROJECTSMO_DATALAKE_API_BASEURL}
 REPORTS_API_BASEURL=${PROJECTSMO_REPORTS_API_BASEURL}
 STORAGE_API_BASEURL=${PROJECTSMO_STORAGE_API_BASEURL}
+DATAPRODUCT_API_BASEURL=${PROJECTSMO_DATAPRODUCT_API_BASEURL}
