changed the taf for removing backup

--- a/packages/dataiku/azure/ansible/roles/dataiku-upgrade/tasks/main.yml
+++ b/packages/dataiku/azure/ansible/roles/dataiku-upgrade/tasks/main.yml
@@ -143,7 +143,7 @@
   file:
     path: "{{dss_backup_directory}}/dataiku_backup_{{date_now}}_{{ansible_eth0.ipv4.address}}.tar.gz"
     state: absent
-  tags: [ dss-upgrade-production, dss-upgrade-training, dss-upgrade-automation ]
+  tags: [ dss-upgrade-production-2, dss-upgrade-training, dss-upgrade-automation ]
 
 - name: Remove backup file from local storage
   file:
