--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -122,6 +122,7 @@ CODESPACE_OPENSEARCH_LOGS_URL=
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=
 CODESPACE_OIDC_POPUP_URL=,
 CODESPACE_OIDC_POPUP_WAIT_TIME=,
+VAULT_API_BASEURL=
 
 
 ENABLE_CHRONOS_FORECASTING_SERVICE=false
