--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -58,6 +58,7 @@ CODESPACE_OPENSEARCH_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_LOGS_URL}
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_BUILD_LOGS_URL}
 CODESPACE_OIDC_POPUP_URL: ${CODESPACE_OIDC_POPUP_URL},  
 CODESPACE_OIDC_POPUP_WAIT_TIME: ${CODESPACE_OIDC_POPUP_WAIT_TIME},
+VAULT_API_BASEURL: ${VAULT_API_BASEURL},
 ENABLE_CHRONOS_FORECASTING_SERVICE=${PROJECTMO_ENABLE_CHRONOS_FORECASTING_SERVICE}
 ENABLE_DATALAKE_SERVICE=${PROJECTMO_ENABLE_DATALAKE_SERVICE}
 CHRONOS_MFE_APP_URL=${PROJECTMO_ENABLE_CHRONOS_MFE_APP_URL}
