--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -925,6 +925,10 @@ definitions:
       gitjobRunID:
         type: string
         description: "git job run Id of project deployed"
+      deploymentAuditLogs:
+        type: array
+        items:
+          $ref: "#/definitions/DeploymentAuditVO"
          
   CodeServerRecipeDetailsVO:
     type: object
@@ -1291,3 +1295,24 @@ definitions:
         -typeOfProject
         -producerId
         -piiData
+
+  DeploymentAuditVO:
+    type: object
+    properties:
+      triggeredBy:
+        type: string
+        description: "User who triggered deployment of codespace"
+      triggeredOn:
+        type: string
+        format: date
+        description: "date on which codespace is deployed triggred"
+      deploymentStatus:
+        type: string
+        description: "status of codespace - DEPLOY_REQUESTED,DEPLOYED,DEPLOYMENT_FAILED."
+      deployedOn:
+        type: string
+        format: date
+        description: "date on which codespace deployed"
+      branch:
+        type: string
+        description: "branch one which codespace is deployed"
