--- a/packages/model-registry/model-registry-lib/src/main/resources/application.yml
+++ b/packages/model-registry/model-registry-lib/src/main/resources/application.yml
@@ -35,6 +35,7 @@ allowedCorsOriginPatternUrl: ${CORS_ORIGIN_URL:http://*}
   
 jwt:
   secret:
+    key: ${JWT_SECRET_KEY:XXXXXX}
     tokenExpiry: ${JWT_TOKEN_EXPIRY_TIME_IN_MIN:90}
     byPassUrl: ${BYPASS_JWT_AUTHENTICATION:/models/jwt}
     kid: ${JWT_SECRET_KID:XXXXX}
