--- a/deployment/kubernetes/helm/charts/authenticator-service/templates/networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/authenticator-service/templates/networkpolicy.yaml
@@ -20,6 +20,9 @@ spec:
             app.kubernetes.io/name: code-server-backend
         namespaceSelector:
           matchLabels:
-            kubernetes.io/metadata.name: code-server             
+            kubernetes.io/metadata.name: code-server
+        ports:
+        - protocol: TCP
+          port: {{ .Values.containerPort }}                 
   policyTypes:
     - Ingress
