--- a/deployment/kubernetes/helm/charts/chronos-mfe/templates/networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/chronos-mfe/templates/networkpolicy.yaml
@@ -5,10 +5,18 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   ingress:
-    - ports:
-        - port: {{ .Values.containerPort }}
-  podSelector:
-    matchLabels:
-      {{- include "chronos-mfe.selectorLabels" . | nindent 8 }}
+    - from:
+      - podSelector:
+          matchLabels:
+            app.kubernetes.io/name: traefikv2
+        namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: ingress
+        ports:
+         - protocol: TCP
+           port: {{ .Values.containerPort }}                 
   policyTypes:
     - Ingress
+  podSelector:
+    matchLabels:
+      {{- include "chronos-mfe.selectorLabels" . | nindent 8 }}  
