--- a/deployment/kubernetes/helm/charts/data-product-mfe/templates/networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/data-product-mfe/templates/networkpolicy.yaml
@@ -4,9 +4,20 @@ metadata:
   name: {{ include "data-product-mfe.fullname" . }}
   namespace: {{ .Values.namespace }}
 spec:
+  # ingress:
+  #   - ports:
+  #       - port: {{ .Values.containerPort }}
   ingress:
-    - ports:
-        - port: {{ .Values.containerPort }}
+    - from:
+      - podSelector:
+         matchLabels:
+           app.kubernetes.io/name: traefikv2
+        namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: ingress
+        ports:
+         - protocol: TCP
+           port: {{ .Values.containerPort }}    
   podSelector:
     matchLabels:
       {{- include "data-product-mfe.selectorLabels" . | nindent 8 }}
