--- a/deployment/kubernetes/helm/charts/dss-be/templates/networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/dss-be/templates/networkpolicy.yaml
@@ -5,8 +5,18 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   ingress:
-    - ports:
-        - port: {{ .Values.containerPort }}
+    - from:
+      - podSelector:
+         matchLabels:
+           app: dna-kong-gw-kong
+        namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: kong
+        ports:
+         - protocol: TCP
+           port: {{ .Values.containerPort }}                 
+  policyTypes:
+    - Ingress
   podSelector:
     matchLabels:
       {{- include "dss-be.selectorLabels" . | nindent 8 }}
