--- a/deployment/kubernetes/helm/charts/matomo-be/templates/networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/matomo-be/templates/networkpolicy.yaml
@@ -5,8 +5,15 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   ingress:
-    - ports:
-        - port: {{ .Values.containerPort }}
+    - from:
+        - podSelector:
+            matchLabels:
+              app: dna-kong-gw-kong
+          namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: kong  
+          ports:
+          - port: {{ .Values.containerPort }}
   podSelector:
     matchLabels:
       {{- include "matomo-be.selectorLabels" . | nindent 8 }}
