--- a/deployment/kubernetes/helm/charts/model-registry/templates/networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/model-registry/templates/networkpolicy.yaml
@@ -5,9 +5,16 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   ingress:
-    - ports:
-        - protocol: TCP
-          port: {{ .Values.containerPort }}        
+    - from:
+       - podSelector:
+          matchLabels:
+            app: dna-kong-gw-kong
+         namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: kong
+         ports:
+          - protocol: TCP
+            port: {{ .Values.containerPort }}        
   podSelector:
     matchLabels:
       {{- include "model-registry.selectorLabels" . | nindent 8 }}
