secured kafka connection changes for dna backend

--- a/packages/backend/dnambc-lib/src/main/resources/application.yml
+++ b/packages/backend/dnambc-lib/src/main/resources/application.yml
@@ -32,7 +32,21 @@ spring:
     multipart:
       max-file-size: 5MB
       max-request-size: 5MB
-      
+  kafka:
+    producer:
+    bootstrap-servers: ${NAAS_BROKER:localhost:9092}
+    properties:
+      ssl:
+        truststore:
+          location: ${TRUSTSTORE_PATH:/XXXX/XXXX/truststore.jks}
+          password: ${TRUSTSTORE_PASSWORD:XXXX}
+          type: PKCS12
+        keystore:
+          location: ${KEYSTORE_PATH:/XXXX/XXXX/keystore.p12}
+          password: ${KEYSTORE_PASSWORD:XXXX}
+          type: PKCS12
+      security:
+          protocol: SSL    
   cloud:
     stream:
       default-binder: kafka
