--- a/packages/airflow-backend/airflow-backend-lib/src/main/resources/application.yml
+++ b/packages/airflow-backend/airflow-backend-lib/src/main/resources/application.yml
@@ -16,7 +16,21 @@ spring:
           use_jdbc_metadata_defaults: false
     hibernate:
      ddl-auto: none
-     
+  kafka:
+    producer:
+    bootstrap-servers: ${NAAS_BROKER:XXXX:XXXX}
+    properties:
+      ssl:
+        truststore:
+          location: ${TRUSTSTORE_PATH:/XXXX/XXXX/truststore.jks}
+          password: ${TRUSTSTORE_PASSWORD:XXXX}
+          type: PKCS12
+        keystore:
+          location: ${KEYSTORE_PATH:/XXXX/XXXX/keystore.p12}
+          password: ${KEYSTORE_PASSWORD:XXXX}
+          type: PKCS12
+      security:
+          protocol: SSL   
   cloud:
     stream:
       default-binder: kafka
